# AgentNeedCoffee

./: .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  demo.py  pyproject.toml
.github/workflows/: ci.yml
skills/agent-need-coffee/: SKILL.md
skills/agent-need-coffee/agents/: openai.yaml
src/agent_need_coffee/: __init__.py  cli.py  core.py  mcp_server.py  models.py  policy.py  server.py  service.py  social.py  store.py
src/agent_need_coffee/adapters/: crewai.py  langchain.py  openai.py
tests/: test_core.py  test_mcp_recovery.py  test_server_social.py
