[project]
name = "agent-need-coffee"
version = "0.2.0"
description = "A local MCP recovery server that helps AI agents detect loops, checkpoint, and recover."
authors = [
    {name = "YonderL", email = "your.email@example.com"},
]
dependencies = [
    "mcp>=1.27,<2",
    "pydantic>=2.0.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "coverage>=7.0.0",
    "pytest>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/YonderL/agentneedcoffee"

[project.scripts]
agent-need-coffee-mcp = "agent_need_coffee.mcp_server:main"

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
